crates/hird-parse/tests/snapshots/smoke__expr_field_chain.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = x.y.z\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    FIELD_EXPR
      FIELD_EXPR
        WHITESPACE " "
        IDENT "x"
        DOT "."
        IDENT "y"
      DOT "."
      IDENT "z"
