crates/hird-parse/tests/snapshots/smoke__expr_handle_basic.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = handle { Log -> capturing } in body\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    HANDLE_EXPR
      WHITESPACE " "
      HANDLE_KW "handle"
      WHITESPACE " "
      L_BRACE "{"
      HANDLE_ARM
        WHITESPACE " "
        IDENT "Log"
        WHITESPACE " "
        ARROW "->"
        WHITESPACE " "
        IDENT "capturing"
      WHITESPACE " "
      R_BRACE "}"
      WHITESPACE " "
      IN_KW "in"
      WHITESPACE " "
      IDENT "body"
