crates/hird-parse/tests/snapshots/smoke__expr_handle_parametric_effect.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = handle { Tool<ReadRepo> -> mock_read } in run(config)\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    HANDLE_EXPR
      WHITESPACE " "
      HANDLE_KW "handle"
      WHITESPACE " "
      L_BRACE "{"
      HANDLE_ARM
        APP_TYPE
          WHITESPACE " "
          IDENT "Tool"
          TYPE_ARGS
            LT "<"
            IDENT "ReadRepo"
            GT ">"
        WHITESPACE " "
        ARROW "->"
        WHITESPACE " "
        IDENT "mock_read"
      WHITESPACE " "
      R_BRACE "}"
      WHITESPACE " "
      IN_KW "in"
      APP_EXPR
        WHITESPACE " "
        IDENT "run"
        PAREN_EXPR
          L_PAREN "("
          IDENT "config"
          R_PAREN ")"
