crates/hird-parse/tests/snapshots/smoke__expr_install_basic.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = install { Tool<ReadRepo> -> demo_read } in run_demo(config)\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    INSTALL_EXPR
      WHITESPACE " "
      INSTALL_KW "install"
      WHITESPACE " "
      L_BRACE "{"
      HANDLE_ARM
        APP_TYPE
          WHITESPACE " "
          IDENT "Tool"
          TYPE_ARGS
            LT "<"
            IDENT "ReadRepo"
            GT ">"
        WHITESPACE " "
        ARROW "->"
        WHITESPACE " "
        IDENT "demo_read"
      WHITESPACE " "
      R_BRACE "}"
      WHITESPACE " "
      IN_KW "in"
      APP_EXPR
        WHITESPACE " "
        IDENT "run_demo"
        PAREN_EXPR
          L_PAREN "("
          IDENT "config"
          R_PAREN ")"
