crates/hird-parse/tests/snapshots/smoke__expr_let.snap
---
source: crates/hird-parse/tests/smoke.rs
expression: "render_cst(\"fn f() = let x = 42 in x\")"
---
SOURCE_FILE
  FN_DECL
    FN_KW "fn"
    WHITESPACE " "
    IDENT "f"
    L_PAREN "("
    R_PAREN ")"
    WHITESPACE " "
    EQ "="
    LET_EXPR
      WHITESPACE " "
      LET_KW "let"
      BIND_PAT
        WHITESPACE " "
        IDENT "x"
      WHITESPACE " "
      EQ "="
      WHITESPACE " "
      INT "42"
      WHITESPACE " "
      IN_KW "in"
      WHITESPACE " "
      IDENT "x"
